Connect button red/green

--- a/Apps/Android/app/src/main/res/values/strings.xml
+++ b/Apps/Android/app/src/main/res/values/strings.xml
@@ -14,5 +14,7 @@
     <string name="ok">Ok</string>
     <string name="fu">Fuck you</string>
     <string name="connect">Connect</string>
-
+    <string name="connected">Connected</string>
+    <color name="red">#E31616</color>
+    <color name="green">#FF3CE316</color>
 </resources>
