New icon Better connection handling

--- a/Apps/Android/app/src/main/res/values/strings.xml
+++ b/Apps/Android/app/src/main/res/values/strings.xml
@@ -15,6 +15,10 @@
     <string name="fu">Fuck you</string>
     <string name="connect">Connect</string>
     <string name="connected">Connected</string>
+
+    <string name="notConnected">Not connected to Kinetix device</string>
+
+
     <color name="red">#E31616</color>
     <color name="green">#FF3CE316</color>
 </resources>
