--- a/Apps/Android/app/src/main/res/values-fr/strings.xml
+++ b/Apps/Android/app/src/main/res/values-fr/strings.xml
@@ -26,4 +26,10 @@
     <string name="closeView">Fermer</string>
     <string name="action_about">A propos</string>
     <string name="tools">Outils</string>
+    <string name="buttonsPosition">Position des boutons</string>
+    <string name="buttonPositionSummary">Vous devrez relancer l\'application pour appliquer la modification</string>
+    <string name="left">Gauche</string>
+    <string name="center">Centre</string>
+    <string name="right">Droite</string>
+    <string name="scratch">Gratte</string>
 </resources>
