--- a/Apps/Android/app/src/main/res/values/strings.xml
+++ b/Apps/Android/app/src/main/res/values/strings.xml
@@ -6,9 +6,10 @@
     <string name="action_about">About</string>
 
     <string name="first_fragment_label" translatable="false">Kinetix</string>
-    <string name="fist">Close</string>
+    <string name="close">Close</string>
     <string name="open">Open</string>
-    <string name="pinch">Pinch</string>
+    <string name="openPinch">Open Pinch</string>
+    <string name="closedPinch">Closed Pinch</string>
     <string name="one">One</string>
     <string name="two">Two</string>
     <string name="three">Three</string>
@@ -16,10 +17,11 @@
     <string name="five">Five</string>
     <string name="ok">Ok</string>
     <string name="scratch">Scratch</string>
+    <string name="come">Come here</string>
+
     <string name="calibration">Calibration</string>
     <string name="fu" translatable="false">Fuck you</string>
     <string name="connect">Connect</string>
-    <string name="connectProto">Connect Proto</string>
     <string name="connected">Connected</string>
     <string name="cancel">Cancel</string>
     <string name="confirm">Start Calibration</string>
@@ -27,6 +29,7 @@
     <string name="calibTitle">WARNING</string>
     <string name="tools">Tools</string>
     <string name="closeView">Close</string>
+    <string name="prefixPositionLabel">Prefix position commands with \"position\"</string>
 
     <string name="notConnected">Not connected to Kinetix device</string>
     <string name="noMacAddress">Please configure MAC Address in settings</string>
