--- a/Apps/Android/app/src/main/res/values/strings.xml
+++ b/Apps/Android/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="ok">Ok</string>
     <string name="scratch">Scratch</string>
     <string name="come">Come here</string>
+    <string name="love">Love</string>
+    <string name="rock">Rock</string>
 
     <string name="calibration">Calibration</string>
     <string name="fu" translatable="false">Fuck you</string>
@@ -36,6 +38,8 @@
     <string name="preference_file_key" translatable="false">fr.reivaxy.kinetix.PREFERENCE_FILE_KEY</string>
     <string name="saved_version_key" translatable="false">versionKey</string>
     <string name="macAddressKey" translatable="false">macAddress</string>
+    <string name="voiceControl" translatable="true">Voice Control</string>
+    <string name="voiceControlKey" translatable="false">voiceControl</string>
 
 
     <color name="red">#E31616</color>
