Reporting actual BT connection state. connections and disconnections.

--- a/Apps/Android/app/src/main/res/values-fr/strings.xml
+++ b/Apps/Android/app/src/main/res/values-fr/strings.xml
@@ -40,4 +40,6 @@
     <string name="action_devices">Appareils</string>
     <string name="device_list_title">Liste des appareils Kinetix</string>
     <string name="device_list_pick">Touchez l\'appareil pour s\'y connecter</string>
+    <string name="connecting">Connexion</string>
+    <string name="connectionFailed">Echec de la connexion</string>
 </resources>
