--- a/Apps/Android/app/src/main/res/values/strings.xml
+++ b/Apps/Android/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="fu" translatable="false">Fuck you</string>
     <string name="connect">Connect</string>
     <string name="connected">Connected</string>
+    <string name="connecting">Connecting</string>
     <string name="cancel">Cancel</string>
     <string name="confirm">Start Calibration</string>
     <string name="calibMessage">Cancel if servos are already wired!</string>
@@ -34,6 +35,7 @@
     <string name="prefixPositionLabel">Prefix position commands with \"position\"</string>
 
     <string name="notConnected">Not connected to Kinetix device</string>
+    <string name="connectionFailed">Connection failed</string>
     <string name="noMacAddress">Please configure MAC Address in settings</string>
     <string name="preference_file_key" translatable="false">fr.reivaxy.kinetix.PREFERENCE_FILE_KEY</string>
     <string name="saved_version_key" translatable="false">versionKey</string>
@@ -47,6 +49,7 @@
     <color name="red">#E31616</color>
     <color name="green">#FF3CE316</color>
     <color name="orange">#E0790A</color>
+    <color name="yellow">#F4E01B</color>
     <string name="title_activity_settings" translatable="false">SettingsActivity</string>
     <string name="title_activity_about" translatable="false">AboutActivity</string>
     <string name="title_activity_tools" translatable="false">ToolsActivity</string>
